// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsertCar 1`] = `
{
  "keys": [
    "Q:Dynamic1________["car"]",
    "Q:Dynamic3________[null]",
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Static1_________[]",
  ],
  "sets": [
    {
      "set": "A:Complex2________",
    },
    {
      "set": "A:Complex1________",
    },
    {
      "set": "A:Dynamic2________",
    },
  ],
}
`;

exports[`InsertDriver 1`] = `
{
  "keys": [],
  "sets": [],
}
`;

exports[`InsertTruckWithDriver 1`] = `
{
  "keys": [
    "Q:Dynamic1________["truck"]",
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Sorted1_________[]",
    "Q:Static2_________[]",
  ],
  "sets": [
    {
      "set": "A:Complex2________",
    },
    {
      "set": "A:Complex1________",
    },
    {
      "set": "A:Dynamic2________",
    },
  ],
}
`;

exports[`RemoveCar 1`] = `
{
  "sets": [
    {
      "set": "P:0000000000000000000000a1",
    },
    {
      "set": "O:0000000000000000000000a1",
    },
  ],
}
`;

exports[`RemoveHenry 1`] = `
{
  "sets": [
    {
      "set": "P:0000000000000000000000d1",
    },
    {
      "set": "O:0000000000000000000000d1",
    },
  ],
}
`;

exports[`RemoveTruck 1`] = `
{
  "sets": [
    {
      "set": "P:0000000000000000000000b1",
    },
    {
      "set": "O:0000000000000000000000b1",
    },
  ],
}
`;

exports[`UpdateAllPrices 1`] = `
{
  "keys": [
    "Q:Dynamic1________["bus"]",
    "Q:Dynamic1________["car"]",
    "Q:Dynamic1________["truck"]",
    "Q:Sorted1_________[]",
    "Q:Static2_________[]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000a1"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000a2"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000a3"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000a4"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000b1"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000b2"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000b3"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000b4"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000c1"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000c2"}]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000c3"}]",
  ],
  "sets": [
    {
      "set": "A:Targeted1_______",
    },
    {
      "set": "A:Complex2________",
    },
  ],
}
`;

exports[`UpdateBusRoutes 1`] = `
{
  "keys": [
    "Q:Dynamic3________[null]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000c1"}]",
  ],
  "sets": [
    {
      "set": "A:Targeted1_______",
    },
    {
      "set": "A:Dynamic2________",
    },
  ],
}
`;

exports[`UpdateCarDriver 1`] = `
{
  "keys": [
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000a2"}]",
  ],
  "sets": [],
}
`;

exports[`UpdateCarPrice 1`] = `
{
  "keys": [
    "Q:Dynamic1________["car"]",
    "Q:Sorted1_________[]",
    "Q:Static2_________[]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000a1"}]",
  ],
  "sets": [
    {
      "set": "A:Targeted1_______",
    },
    {
      "set": "A:Complex2________",
    },
  ],
}
`;

exports[`UpdateCarToBus 1`] = `
{
  "keys": [
    "Q:Static1_________[]",
    "Q:Unique1_________[{"$oid":"0000000000000000000000a1"}]",
  ],
  "sets": [
    {
      "set": "A:Targeted1_______",
    },
    {
      "set": "A:Complex1________",
    },
  ],
}
`;

exports[`UpdateHenrySalary 1`] = `
{
  "keys": [],
  "sets": [
    {
      "filter": "Q:Populated1______",
      "set": "P:0000000000000000000000d1",
    },
  ],
}
`;

exports[`UpdateJohnName 1`] = `
{
  "keys": [],
  "sets": [
    {
      "filter": "Q:Populated2______",
      "set": "P:0000000000000000000000d2",
    },
    {
      "filter": "Q:Populated1______",
      "set": "P:0000000000000000000000d2",
    },
  ],
}
`;

exports[`UpsertCarViaPrice 1`] = `
{
  "keys": [
    "Q:Dynamic1________["car"]",
    "Q:Dynamic2________[null]",
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Sorted1_________[]",
    "Q:Static1_________[]",
    "Q:Static2_________[]",
  ],
  "sets": [
    {
      "set": "A:Complex2________",
    },
    {
      "set": "A:Complex1________",
    },
  ],
}
`;
